# Turbo-ECS

./: .gitignore  Cargo.toml  README.md
benches/: benchmarks.rs
src/: context.rs  lib.rs  rustfmt.toml
src/archetypes/: archetype_instance.rs  archetype_macros.rs  archetype_registry.rs  archetype_store.rs  mod.rs
src/components/: component_id.rs  component_set.rs  component_type.rs  mod.rs
src/data_structures/: any_buffer.rs  any_vec.rs  bit_field.rs  mod.rs  pool.rs  range_allocator.rs
src/entities/: entity_instance.rs  entity_query.rs  entity_registry.rs  entity_store.rs  mod.rs
src/systems/: mod.rs  system.rs  system_registry.rs  system_store.rs
src/tests/: mod.rs  range_allocator_tests.rs
turbo_ecs_derive/: Cargo.toml
turbo_ecs_derive/src/: component.rs  lib.rs  system.rs
