[package]
name = "turbo_ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0.8"
rayon = "1.5.3"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
nohash-hasher = "0.2.0"
turbo_ecs_derive = { path = "turbo_ecs_derive" }

[dev-dependencies]
nalgebra-glm = "0.17.0"
criterion = "0.3.6"
rand = "0.8.5"

[[bench]]
name = "benchmarks"
harness = false